--- a/report-features/report-schedule/pom.xml
+++ b/report-features/report-schedule/pom.xml
@@ -6,23 +6,28 @@
 		<artifactId>report-features</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>report-template</artifactId>
+	<artifactId>report-schedule</artifactId>
 	<packaging>ejb</packaging>
-	<name>Report Template Module</name>
+	<name>Report Schedule Module</name>
 
 	<dependencies>
 		<dependency>
 			<groupId>reportbay</groupId>
-			<artifactId>report-model</artifactId>
+			<artifactId>report-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		
+		<!-- Quartz : TODO: move to separate web module -->
 		<dependency>
-			<groupId>reportbay</groupId>
-			<artifactId>report-datasource</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<scope>provided</scope>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.2.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz-jobs</artifactId>
+		    <version>2.2.1</version>
 		</dependency>
 	</dependencies>
 
