--- a/report-rest/pom.xml
+++ b/report-rest/pom.xml
@@ -63,6 +63,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>reportbay</groupId>
+			<artifactId>report-schedule</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.8.5</version>
